refactor: swapped arguments in asserts